Create posts module

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
         <link rel="stylesheet" href="./css/output.css">
     </head>
     <body>
-        
+        <div id="posts-container" class="container mx-auto flex flex-row items-start flex-nowrap"></div>
+
         <script type="module" src="./js/app.js"></script>
     </body>
 </html>
