--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
         <link rel="stylesheet" href="./css/output.css">
     </head>
     <body>
-        <header class="">
+        <header>
             <div class="container mx-auto">
                 <div class="flex flex-row justify-between items-center gap-1 md:gap-3 px-1 md:px-2 py-2 md:py-6 h-14 md:h-20">
                     <!-- Logo -->
