--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
                         </span>
                     </div>
 
-                    <!-- Searchpost form -->
+                    <!-- Search pin form -->
                     <form id="search-form" class="overflow-hidden flex-grow rounded-md md:rounded-xl h-9 md:h-10">
                         <input class="w-full h-full bg-orange-300 px-4 py-2 outline-none text-sm placeholder:text-md" type="text" placeholder="Type to search..." >
                     </form>
@@ -41,7 +41,7 @@
             </div>
         </header>
 
-        <div id="posts-container" class="container mx-auto flex flex-row items-start flex-nowrap"></div>
+        <div id="pins-container" class="container mx-auto flex flex-row items-start flex-nowrap"></div>
 
 
         <script type="module" src="./js/app.js"></script>
