Make basic for modals

--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
             </div>
         </header>
 
+        <!-- Контейнер для пинов -->
         <div id="pins-container" class="container mx-auto flex flex-row items-start flex-nowrap"></div>
 
 
