--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,7 @@
         </header>
 
         <!-- Контейнер для пинов -->
-        <div id="pins-container" class="container mx-auto flex flex-row items-start flex-nowrap"></div>
+        <div id="pins-container" class="container mx-auto flex flex-row gap-6 items-start flex-nowrap"></div>
 
 
         <script type="module" src="./js/app.js"></script>
